fix item introduction meta spacing

--- a/cfgov/unprocessed/css/organisms/item-introduction.less
+++ b/cfgov/unprocessed/css/organisms/item-introduction.less
@@ -47,11 +47,12 @@
     }
 
     .meta {
+      // visually approximates 30px
+      margin-bottom: unit(20px / @base-font-size-px, em);
+
         .byline {
           .heading-4();
         }
-
-        // visually approximates 30px
     }
 }
 
